<resources>
    <string name="app_name">Spot\'d</string>

    <!-- Strings used by code -->
    <string name="facebook_application_id" translatable="false">150913652261880</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb150913652261880</string>
    <string name="firebase_storage_uri" translatable="false">gs://spotd-11132.appspot.com/</string>

    <!-- User Interface Related Strings -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_debug">DebugActivity</string>

    <string name="signin_in_progress">Signing in…</string>
    <string name="signin_fail_generic">Sign in unsuccessful.</string>
    <string name="signin_fail_network">There is no network connection. Please check your network settings and try again.</string>
    <string name="signin_fail_cancelled">"Spot'd needs to know who you are!  Please sign in. "</string>
    <string name="signin_btn_signin">Sign In</string>

    <string name="home_fragment_lost_button">I LOST MY PET</string>
    <string name="home_fragment_found_button">I FOUND A PET</string>
    <string name="home_fragment_profile_photo_desc">Profile photo</string>

    <string name="profile_fragment_profile_photo_desc">Profile photo</string>
    <string name="profile_fragment_editName_hint">First Last</string>
    <string name="profile_fragment_editEmail_hint">address@example.com</string>
    <string name="profile_fragment_btnShowMyPets_text">Show My Pets</string>
    <string name="profile_fragment_btnSaveProfile_text">Save Profile</string>
    <string name="profile_fragment_btnAddAPet_text">Add a Pet</string>

    <string name="about_app_description">A lost and found pet registry.</string>
    <string name="about_authors">Jakob Suell \n Spencer AskFeldt \n Anthony Dwyer</string>
    <string name="about_pic_content_description">Pug life.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>

    <string name="nav_home">Home</string>
    <string name="nav_found">Report Found</string>
    <string name="nav_lost">Report Lost</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_log">Logout</string>
    <string name="nav_quit">Quit</string>
    <string name="camera_rejection">Cannot use the camera without permission</string>

    <string-array name="genders">
        <item>N/A</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="type">
        <item>N/A</item>
        <item>Cat</item>
        <item>Dog</item>
        <item>Horse</item>
        <item>Rabbit</item>
        <item>Snake</item>
        <item>Lizard</item>
        <item>Guinea pig</item>
    </string-array>
    <string-array name="color">
        <item>N/A</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Cream</item>
        <item>Grey</item>
        <item>White</item>
    </string-array>

    <string name="myProfileFragment">This is the "My Profile" fragment</string>
    <string name="lostAPetFragment">This is the "Lost a Pet" fragment</string>
    <string name="foundAPetFragment">This is the "Found a Pet" fragment</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_revoke">Unable to invoke camera</string>


</resources>
