<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/tool_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/tool_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/tool_found"
            android:title="@string/nav_found" />
        <item
            android:id="@+id/tool_lost"
            android:title="@string/nav_lost" />
        <item
            android:id="@+id/tool_log"
            android:title="@string/nav_log" />
        <item
            android:id="@+id/tool_quit"
            android:title="@string/nav_quit" />
    </group>

</menu>
