<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/found"
            android:title="@string/nav_found" />
        <item
            android:id="@+id/lost"
            android:title="@string/nav_lost" />
        <item
            android:id="@+id/log"
            android:title="@string/nav_log" />
        <item
            android:id="@+id/quit"
            android:title="@string/nav_quit" />

        <!--<item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="Send" />-->
    </group>

</menu>
