<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".AboutFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

            <TextView
                android:id="@+id/fragment_about_application_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="42sp"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/fragment_about_version_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fragment_about_application_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="24dp"
                android:textAlignment="center"
                />

        <ImageView
            android:id="@+id/fragment_about_puglife"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="64dp"
            android:adjustViewBounds="false"
            android:contentDescription="TODO"
            android:cropToPadding="false"

            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_about_version_name"
            app:srcCompat="@mipmap/puppy" />

        <TextView
            android:id="@+id/fragment_about_authors"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/fragment_about_puglife"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            android:text="@string/about_authors"
            android:textColor="@color/colorPrimary"
            android:textSize="12dp"
            android:textAlignment="center"
            />

            <TextView
                android:id="@+id/fragment_about_appDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/fragment_about_authors"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:text="@string/about_app_description"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                />


    </android.support.constraint.ConstraintLayout>

</FrameLayout>